metadata-retriever/metadata/objects/Aftersales__c.object
<CustomObject>
    <description>Contact Portfolio: To record MBCL Aftersales record
Changed object name from &quot;Aftersales Record&quot; to &quot;Aftersales&quot;</description>
    <fields>
        <fullName>Action_Detail__c</fullName>
        <label>Action Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <label>Action Taken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LDCL_AfterSales_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL AfterSales Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Problem_Actual_Detail__c</fullName>
        <label>Problem Actual Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Detail__c</fullName>
        <label>Problem Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>Repair Order Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Order_Type__c</fullName>
        <label>Repair Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Consultant__c</fullName>
        <label>Service Consultant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service/Repair Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>/* 
Created by: Amy Liang 
Used by: Aftersales Record 
Function: Code of the dealer that deliver the service
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Aftersales is &quot;Service_Dealer&quot;</description>
        <inlineHelpText>Code of the dealer that deliver the service</inlineHelpText>
        <label>Service Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Aftersales_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attribute in Data Dictionary object Aftersales is &quot;Service_Vehicle&quot;</description>
        <label>Service Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Aftersales_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <formula>Service_Vehicle__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Delivery_Date__c</fullName>
        <label>Vehicle Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration_No__c</fullName>
        <label>Vehicle Registration No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_km_s__c</fullName>
        <label>Vehicle km&apos;s</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Aftersales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Service_Dealer__c</columns>
        <columns>Vehicle_km_s__c</columns>
        <columns>Vehicle_Registration_No__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SN-{000000000}</displayFormat>
        <label>Service No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aftersales</pluralLabel>
    <recordTypes>
        <fullName>Roadside_Assistant</fullName>
        <active>true</active>
        <label>Roadside Assistant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_General</fullName>
        <active>true</active>
        <label>Service General</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Service_No_Read_Only</fullName>
        <active>true</active>
        <description>It&apos;s not allowed to change service number.</description>
        <errorConditionFormula>AND(
ISCHANGED( Name ),
$Profile.Name != &apos;IntegrationAPI&apos; 
)</errorConditionFormula>
        <errorDisplayField>Action_Detail__c</errorDisplayField>
        <errorMessage>It&apos;s not allowed to change service number.</errorMessage>
    </validationRules>
</CustomObject>